--- a/index.html
+++ b/index.html
@@ -1,44 +1,39 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>AR Basic Demo</title>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <link rel="stylesheet" href="index.css">
+  <title>Alpha AR</title>
+  <style>
+    .container {
+      text-align: center;
+      color: #ffffff;
+    }
 
-    <script src="https://aframe.io/releases/1.2.0/aframe.min.js"></script>
-    <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar.js"></script>
-  </head>
-  <body>
-    <a-scene embedded arjs="trackingMethod: best;">
-      <a-assets>
-        <a-asset-item id="model" src="Markers/A/dog.gltf"></a-asset-item>
-        <a-asset-item id="marker" src="Markers/A/AA.patt"></a-asset-item>
-        
-      </a-assets>
+    h1 {
+      font-size: 24px;
+      margin-bottom: 20px;
+      color: rgb(43, 37, 38);
+    }
 
-      <a-marker preset="custom" type="pattern" url="Markers/A/AA.patt">
-        <a-entity
-          gltf-model="#model"
-          scale="0.1 0.1 0.1"
-          position="0 0 0"
-          rotation="-90 45 "
-        ></a-entity>
-      </a-marker>
+    h4 {
+      color: rgb(43, 38, 39);
+      margin-top: auto;
+      margin-bottom: 20px;
+    }
 
-      <a-entity camera></a-entity>
-    </a-scene>
-
-    <script>
-      // Make a GET request to the backend server
-      fetch('https://learnitar-backend.onrender.com')
-        .then(response => response.text())
-        .then(data => {
-          // Handle the response from the server
-          console.log('Server response:', data);
-        })
-        .catch(error => {
-          console.error('Error:', error);
-        });
-    </script>
-  </body>
+   
+  </style>
+</head>
+<body>
+  <div class="container">
+    <h1>Welcome to Alpha AR</h1>
+    <h4>Welcome to the Alphabet AR Learning website! Our platform offers an exciting way for children to learn the ABCs using Augmented Reality (AR) technology.</h4>
+    <div class="button-container">
+      <a href="ar.html" class="button">Start AR</a>
+      <a href="https://docs.google.com/document/d/1VwGWx8vV1zpsD967j2UwpKzOOlsEJJr-jbTtc-qjB8g/edit?usp=sharing" class="button">Download Alpha Book</a>
+    </div>
+  </div>
+</body>
 </html>
