--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
     <h4>Welcome to the Alphabet AR Learning website! Our platform offers an exciting way for children to learn the ABCs using Augmented Reality (AR) technology.</h4>
     <div class="button-container">
       <a href="ar.html" class="button">Start AR</a>
-      <a href="https://drive.google.com/file/d/1QenLZBXHKow6EVOQQtoOJLMErpXV6hgr/view?usp=sharing" class="button" download>Download Alpha Book</a>
+      <a href="https://drive.google.com/uc?export=download&id=1QenLZBXHKow6EVOQQtoOJLMErpXV6hgr" class="button" download>Download Alpha Book</a>
+
 
     </div>
   </div>
